header spacing fix

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -26,7 +26,7 @@ a {
 
 .header {
   width: 100%;
-  height: 50%;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -121,6 +121,8 @@ a {
   background-image: url('../../uploads/profile_pics/avatar.png');
   background-size: cover;
   background-position: 50% 50%;
+  position: absolute;
+  right: 20px;
 }
 
 /* Calendar Styles */
